test/must_fail/exit_string_argument.ngjs
#!/usr/bin/env ngspicejs
// Exit requires number not string
// linter: ngspicejs-lint
"use strict";

function foo() {
    Math.random();
    exit("asdf");
}

function bar() {
    foo();
}

bar();
